Fix CapRover build: prisma in prod deps + openssl

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,10 +13,10 @@
     "schema": "./prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0"
+    "@prisma/client": "^5.22.0",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "prisma": "^5.22.0",
     "typescript": "^5.6.3"
   }
 }
