--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,8 +2,10 @@
   "name": "@hg/db",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
@@ -17,6 +19,7 @@
     "prisma": "^5.22.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.6",
     "typescript": "^5.6.3"
   }
 }
