--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -2,11 +2,16 @@
   "name": "@hg/env",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
   "dependencies": {
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.6",
     "typescript": "^5.6.3"
   }
 }
